--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	
+	<section class = "testimonial-section">
+		<h1 id = "heading">Testimonials</h1>
+		
+		<div class = "testimonial">
+			
+			<p class = "testimonial-text">This product is amazing! I highly recommend to anyone in need of a solution like this</p>
+		<p class = "testimonial-author">~John Doe</p>
+		</div>
+		<div class = "testimonial">
+			<p class = "testimonial-text">I have been using this for a weeks now it has completely transformed my workflow</p>
+		<p class = "testimonial-author">~Jane Simth</p>
+		</div>
+		
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
