--- a/main.html
+++ b/main.html
@@ -14,12 +14,12 @@
 		
 		<div class = "testimonial">
 			
-			<p class = "testimonial-text">This product is amazing! I highly recommend to anyone in need of a solution like this</p>
-		<p class = "testimonial-author">~John Doe</p>
+			<div class = "testimonial-text">This product is amazing! I highly recommend to anyone in need of a solution like this</div>
+		<div class = "testimonial-author">~John Doe</div>
 		</div>
 		<div class = "testimonial">
-			<p class = "testimonial-text">I have been using this for a weeks now it has completely transformed my workflow</p>
-		<p class = "testimonial-author">~Jane Simth</p>
+			<div class = "testimonial-text">I have been using this for a weeks now it has completely transformed my workflow</div>
+		<div class = "testimonial-author">~Jane Simth</div>
 		</div>
 		
 	</section>
