--- a/main.html
+++ b/main.html
@@ -14,12 +14,11 @@
 		
 		<div class = "testimonial">
 			
-			<div class = "testimonial-text">This product is amazing! I highly recommend to anyone in need of a solution like this</div>
-		<div class = "testimonial-author">~John Doe</div>
+			<div class = "testimonial-text">This product is amazing! I highly recommend to anyone in need of a solution like this. <strong>~John Doe</strong></div>
 		</div>
 		<div class = "testimonial">
-			<div class = "testimonial-text">I have been using this for a weeks now it has completely transformed my workflow</div>
-		<div class = "testimonial-author">~Jane Simth</div>
+			<div class = "testimonial-text">I have been using this for a weeks now it has completely transformed my workflow. <strong>~Jane Smith</strong></div>
+
 		</div>
 		
 	</section>
