--- a/main.html
+++ b/main.html
@@ -8,22 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	
 	<section class = "testimonial-section">
-		<h1 id = "heading">Testimonials</h1>
-		
-		<div class = "testimonial">
-			
-			<div class = "testimonial-text">This product is amazing! I highly recommend to anyone in need of a solution like this. <strong>~John Doe</strong></div>
-		</div>
-		<div class = "testimonial">
-			<div class = "testimonial-text">I have been using this for a weeks now it has completely transformed my workflow. <strong>~Jane Smith</strong></div>
-
-		</div>
-		
+		<h1>Testimonials</h1>
+		<div>This product is amazing! I highly recommend it to anyone in need of solution like this.</div>
+		<div>I have been using this for a few weeks now it has completely transformed my workflow.</div>
 	</section>
-    <script type="text/javascript" src="./script.js">
-</script>
+	
 
 </body>
 
