--- a/main.html
+++ b/main.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-	<section class = "testimonial-section">
-		<h1>Testimonials</h1>
-		<div>This product is amazing! I highly recommend it to anyone in need of solution like this.</div>
-		<div>I have been using this for a few weeks now it has completely transformed my workflow.</div>
-	</section>
-	
-
-</body>
-
+  <body>
+    <div class="mainContainer">
+      <h1>Testimonials</h1>
+      <div class="testimonial">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
+          est maxime quia.
+        </p>
+        <p class="author">jone Doe</p>
+      </div>
+      <div class="testimonial">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
+          est maxime quia.
+        </p>
+        <p class="author">jone Doe</p>
+      </div>
+    </div>
+    <script type="text/javascript" src="./script.js"></script>
+  </body>
 </html>
+
+
+
